Other's Tasks section now properly omits logged-in user's task. Fixed spacing issue in My Tasks section. My Tasks section now populates logged-in user's tasks on first page load instead of having to load another page, then having to go back to see any output.

--- a/client/src/components/Chat/chat.css
+++ b/client/src/components/Chat/chat.css
@@ -33,7 +33,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    min-height: 50vh;
+    /* min-height: 50vh; */ /* This seemed to have no effect on the chat box's height, but was applied to the "My tasks" section. */
     background-color: #f5eaea;
   }
   
